<resources>
    <string name="app_name">KFC Pet Feeder</string>
    <string name="title_life">Life</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>

    <string name="day_sun">Sun</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>

    <string name="user_device">User &amp; Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_manage_user_fragment">ManageUserFragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="day_time">Days &amp; Times: </string>
</resources>