<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- cancel, set title, save -->
    <TextView
        android:id="@+id/setTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="@dimen/margin_large"
        android:clickable="true"
        android:focusable="true"
        android:text="Schedule Title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="cancel"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="save"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- weekDaySelector -->
    <LinearLayout
        android:id="@+id/weekDaySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setTitle"
        tools:ignore="UnknownId">

        <TextView
            android:id="@+id/daySun"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_sun" />

        <TextView
            android:id="@+id/dayMon"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_mon" />

        <TextView
            android:id="@+id/dayTue"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_tue" />

        <TextView
            android:id="@+id/dayWed"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_wed" />

        <TextView
            android:id="@+id/dayThu"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_thu" />

        <TextView
            android:id="@+id/dayFri"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_fri" />

        <TextView
            android:id="@+id/daySat"
            style="@style/DayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_sat" />
    </LinearLayout>

    <!-- time picker -->
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekDaySelector" />

    <!-- feed level -->
    <!-- Left side: Container -->
    <!-- Beaker Image -->
            <ImageView
                android:id="@+id/device_pic"
                android:layout_width="156dp"
                android:layout_height="157dp"
                android:layout_marginTop="@dimen/margin_ylarge"
                android:layout_marginStart="@dimen/margin_small"
                android:src="@drawable/food_level_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timePicker"
                app:layout_constraintEnd_toEndOf="@id/levelOptions" />

        <!-- Food Percentage -->
    <TextView
        android:id="@+id/foodPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_zlarge"
        android:text="0%"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_xlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_pic" />

    <!-- Right side: Level options -->
    <LinearLayout
        android:id="@+id/levelOptions"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_clarge"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_pic"
        app:layout_constraintTop_toBottomOf="@id/timePicker">

        <TextView
            android:id="@+id/level4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@drawable/level_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/level3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@drawable/level_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/level2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@drawable/level_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/level1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@drawable/level_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="1"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
